--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "gulp-imagemin": "~2.2.1",
     "gulp-sourcemaps": "~1.5.0",
     "gulp-filter": "~2.0.2",
-    "browser-sync": "~2.2.1"
+    "browser-sync": "~2.2.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-minify": "0.0.5",
+    "gulp-ignore": "^1.2.1"
   },
   "dependencies": {
     "imagemin-pngquant": "~4.0.0"
