--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "gulp-autoprefixer": "~2.1.0",
     "gulp-imagemin": "~2.2.1",
     "gulp-sourcemaps": "~1.5.0",
-    "gulp-filter": "~2.0.2",
     "browser-sync": "~2.2.1",
     "gulp-concat": "^2.5.2",
     "gulp-minify": "0.0.5",
-    "gulp-ignore": "^1.2.1"
+    "main-bower-files": "~2.5.0",
+    "gulp-filter": "~2.0.2"
   },
   "dependencies": {
     "imagemin-pngquant": "~4.0.0"
