--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,11 @@
   ],
   "dependencies": {
     "susy": "~2.2.2",
-    "normalize-scss": "~3.0.2"
+    "normalize-scss": "~3.0.2",
+    "html5shiv": "~3.7.2",
+    "breakpoint-sass": "~2.5.0",
+    "responsive-nav": "https://github.com/viljamis/responsive-nav.js.git#~1.0.34",
+    "swiper": "~3.0.3"
   },
   "devDependencies": {
     "html5shiv": "~3.7.2",
