--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
   "author": "josh@stageten.tv",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "gulp-sass": "~1.3.3",
-    "gulp": "~3.8.11",
-    "gulp-watch": "~4.1.1",
-    "gulp-autoprefixer": "~2.1.0",
-    "gulp-imagemin": "~2.2.1",
-    "gulp-sourcemaps": "~1.5.0",
     "browser-sync": "~2.2.1",
+    "del": "~1.1.1",
+    "gulp": "~3.8.11",
+    "gulp-autoprefixer": "~2.1.0",
+    "gulp-cache": "~0.2.8",
     "gulp-concat": "^2.5.2",
-    "gulp-minify": "0.0.5",
+    "gulp-csso": "~1.0.0",
+    "gulp-filter": "~2.0.2",
+    "gulp-if": "~1.2.5",
+    "gulp-imagemin": "~2.2.1",
+    "gulp-jshint": "~1.9.2",
+    "gulp-load-plugins": "~0.8.1",
+    "gulp-minify-html": "~1.0.0",
+    "gulp-sass": "~1.3.3",
+    "gulp-size": "~1.2.1",
+    "gulp-sourcemaps": "~1.5.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-useref": "~1.1.1",
+    "gulp-watch": "~4.1.1",
+    "jshint-stylish": "~1.0.1",
     "main-bower-files": "~2.5.0",
-    "gulp-filter": "~2.0.2"
+    "opn": "~1.0.1",
+    "wiredep": "~2.2.2"
   },
   "dependencies": {
     "imagemin-pngquant": "~4.0.0"
