--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "html5shiv": "~3.7.2",
     "breakpoint-sass": "~2.5.0",
     "responsive-nav": "https://github.com/viljamis/responsive-nav.js.git#~1.0.34",
-    "swiper": "~3.0.3"
+    "swiper": "~3.0.3",
+    "jquery": "~2.1.3",
+    "filament-sticky": "~0.1.4"
   },
   "devDependencies": {
     "html5shiv": "~3.7.2",
