--- a/bower.json
+++ b/bower.json
@@ -21,15 +21,10 @@
     "normalize-scss": "~3.0.2",
     "html5shiv": "~3.7.2",
     "breakpoint-sass": "~2.5.0",
-    "responsive-nav": "https://github.com/viljamis/responsive-nav.js.git#~1.0.34",
-    "swiper": "~3.0.3",
-    "jquery": "~2.1.3",
-    "sticky-kit": "~1.1.1"
+    "jquery": "~2.1.3"
   },
   "devDependencies": {
     "html5shiv": "~3.7.2",
-    "breakpoint-sass": "~2.5.0",
-    "responsive-nav": "https://github.com/viljamis/responsive-nav.js.git#~1.0.34",
-    "swiper": "~3.0.3"
+    "breakpoint-sass": "~2.5.0"
   }
 }
