--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jshint-stylish": "~1.0.1",
     "main-bower-files": "~2.5.0",
     "opn": "~1.0.1",
-    "wiredep": "~2.2.2"
+    "wiredep": "~2.2.2",
+    "gulp-rename": "^1.2.0",
+    "critical": "^0.5.6"
   },
   "dependencies": {
     "imagemin-pngquant": "~4.0.0"
