--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "normalize-scss": "~3.0.2",
     "html5shiv": "~3.7.2",
     "breakpoint-sass": "~2.5.0",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "responsive-nav": "~1.0.39",
+    "filament-sticky": "~0.1.6"
   },
   "devDependencies": {
     "html5shiv": "~3.7.2",
