--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "s10-beta",
+  "name": "portfolio",
   "version": "0.1.0",
-  "description": "S10 beta portal build process",
+  "description": "My website",
   "main": "index.html",
   "scripts": {
     "test": "test"
   },
-  "author": "josh@stageten.tv",
+  "author": "josh.laidlaw@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "browser-sync": "~2.2.1",
+    "critical": "^0.5.6",
     "del": "~1.1.1",
     "gulp": "~3.8.11",
     "gulp-autoprefixer": "~2.1.0",
@@ -22,6 +23,8 @@
     "gulp-jshint": "~1.9.2",
     "gulp-load-plugins": "~0.8.1",
     "gulp-minify-html": "~1.0.0",
+    "gulp-nunjucks-render": "^1.0.0",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "~1.3.3",
     "gulp-size": "~1.2.1",
     "gulp-sourcemaps": "~1.5.0",
@@ -30,10 +33,9 @@
     "gulp-watch": "~4.1.1",
     "jshint-stylish": "~1.0.1",
     "main-bower-files": "~2.5.0",
+    "nunjucks": "^2.2.0",
     "opn": "~1.0.1",
-    "wiredep": "~2.2.2",
-    "gulp-rename": "^1.2.0",
-    "critical": "^0.5.6"
+    "wiredep": "~2.2.2"
   },
   "dependencies": {
     "imagemin-pngquant": "~4.0.0"
