--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "breakpoint-sass": "~2.5.0",
     "jquery": "~2.1.3",
     "responsive-nav": "~1.0.39",
-    "filament-sticky": "~0.1.6"
+    "filament-sticky": "~0.1.6",
+    "flexboxgrid": "~6.3.0"
   },
   "devDependencies": {
     "html5shiv": "~3.7.2",
