--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "s10-beta",
+  "name": "josh-laidlaw-portfolio",
   "version": "0.0.0",
   "authors": [
-    "josh@stageten.tv"
+    "josh@joshlaidlaw.com"
   ],
-  "description": "S10 Beta Portal",
+  "description": "Josh Laidlaw's Portfolio",
   "main": "index.html",
   "license": "MIT",
-  "homepage": "stageten.tv",
+  "homepage": "joshlaidlaw.com",
   "private": true,
   "ignore": [
     "**/.*",
@@ -20,10 +20,7 @@
     "susy": "~2.2.2",
     "normalize-scss": "~3.0.2",
     "html5shiv": "~3.7.2",
-    "breakpoint-sass": "~2.5.0",
     "jquery": "~2.1.3",
-    "responsive-nav": "~1.0.39",
-    "filament-sticky": "~0.1.6",
     "flexboxgrid": "~6.3.0",
     "picturefill": "~3.0.1",
     "Swiper": "swiper#^3.3.0"
@@ -31,5 +28,8 @@
   "devDependencies": {
     "html5shiv": "~3.7.2",
     "breakpoint-sass": "~2.5.0"
+  },
+  "resolutions": {
+    "jquery": "~2.1.3"
   }
 }
