--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Super-Linter
-      uses: github/super-linter@v2.0.0
+    # - name: Super-Linter
+    #  uses: github/super-linter@v2.0.0
       
