--- a/package.json
+++ b/package.json
@@ -3,43 +3,36 @@
   "version": "0.1.0",
   "description": "My website",
   "main": "index.html",
+  "type": "module",
   "scripts": {
-    "test": "test"
+    "dev": "npm run build:nunjucks && vite",
+    "build": "npm run build:nunjucks && vite build",
+    "build:nunjucks": "node scripts/build-nunjucks.js",
+    "preview": "vite preview",
+    "critical": "npm run build && node scripts/critical.js",
+    "lint": "eslint js/**/*.js",
+    "lint:fix": "eslint js/**/*.js --fix",
+    "format": "prettier --write \"**/*.{js,json,scss,css,html,nunjucks}\"",
+    "format:check": "prettier --check \"**/*.{js,json,scss,css,html,nunjucks}\"",
+    "analyze": "ANALYZE=true vite build"
   },
   "author": "josh.laidlaw@gmail.com",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "bower": "^1.8.14",
-    "browser-sync": "^2.27.10",
-    "critical": "^4.0.1",
-    "del": "~7.0.0",
-    "gulp": "~3.9.1",
-    "gulp-autoprefixer": "~8.0.0",
-    "gulp-cache": "~1.1.3",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "~4.0.1",
-    "gulp-filter": "~7.0.0",
-    "gulp-if": "~3.0.0",
-    "gulp-imagemin": "~8.0.0",
-    "gulp-jshint": "~2.1.0",
-    "gulp-load-plugins": "~2.0.8",
-    "gulp-minify-html": "~1.0.6",
-    "gulp-nunjucks-render": "^2.2.3",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-size": "~4.0.1",
-    "gulp-sourcemaps": "~3.0.0",
-    "gulp-uglify": "~3.0.2",
-    "gulp-useref": "^5.0.0",
-    "gulp-watch": "~5.0.1",
-    "jshint-stylish": "~2.2.1",
-    "main-bower-files": "^2.13.3",
-    "node-sass": "^7.0.3",
-    "nunjucks": "^3.2.3",
-    "opn": "~6.0.0",
-    "wiredep": "~4.0.0"
+    "autoprefixer": "^10.4.20",
+    "critical": "^7.2.1",
+    "eslint": "^8.57.1",
+    "modern-normalize": "^3.0.1",
+    "nunjucks": "^3.2.4",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.83.0",
+    "terser": "^5.36.0",
+    "vite": "^5.4.8",
+    "vite-plugin-static-copy": "^1.0.4"
   },
   "dependencies": {
-    "imagemin-pngquant": "~9.0.2"
+    "swiper": "^11.1.14"
   }
 }
